# legal-site

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: auth.py  checks.py  config.py  context.py  db.py  engine.py  events.py  logging_config.py  main.py  scan.py  scan_state.py  scanner.py  types.py  url.py
app/api/: auth.py  scan.py  scan_worker.py
app/corpus/: __init__.py  loader.py  models.py
app/report/: renderer.py
app/report/templates/: report.html.j2
docs/: design.md  idea.md  plan.md  research.md  vision.md
docs/adr/: 0001-laws-reference-structure.md  0002-corpus-ui-fields.md  0003-context-gating-and-inverse-keywords.md  README.md
docs/design/: preview.html
docs/laws/: 149-fz-information.md  152-fz-personal-data.md  161-fz-payment-system.md  2300-1-consumer-protection.md  242-fz-data-localization.md  38-fz-advertising.md  436-fz-children-protection.md  53-fz-state-language.md  54-fz-cash-registers.md  63-fz-electronic-signature.md  README.md  gk-rf-offer.md  gk-rf-part-iv-copyright.md  index.yml  ord-ad-marking.md  pp-1119-pdn-protection.md  pp-2463-sale-rules.md  schema.md
docs/laws/common/: cookies-in-russia.md  data-coverage-limitations.md  koap-overview.md
docs/tasks/: iteration-02-skeleton.md  iteration-03-deterministic-engine.md  iteration-04-api.md  iteration-05-design.md  iteration-05a-auth-refactor.md  iteration-06-frontend.md  iteration-06b-detection-fixes.md  iteration-06c-multipage-scan.md
frontend/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/scripts/: build-corpus.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CategoriesGrid.tsx  DomainFavicon.tsx  ErrorView.tsx  FindingCard.tsx  Header.tsx  LawsMarquee.tsx  (+6 more)
prompts/: README.md
tests/: test_api_scans.py  test_auth.py  test_checks.py  test_context.py  test_corpus_loader.py  test_corpus_loader_real.py  test_corpus_models.py  test_engine.py  test_engine_regression.py  test_report.py  test_scan_state.py  test_scan_worker.py  test_url.py
tools/: create_user.py  rebuild_index.py  show_verification_notes.py
(+32 files in other folders)
