[project]
name = "legal-site"
version = "0.1.0"
description = "Проверка сайтов на соответствие законодательству РФ"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "beautifulsoup4>=4.14.3",
    "soupsieve>=2.8.3",
    "httpx>=0.28.1",
    "playwright>=1.59.0",
    "bcrypt>=4.1,<5",
    "weasyprint>=63",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "types-PyYAML>=6.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["temp"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tools"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["weasyprint", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
